--- a/index.html
+++ b/index.html
@@ -178,15 +178,15 @@
                         <ol class="language_group">
                             <li class="skills__item">HTML & CSS</li>
                             <li class="skills__item">JavaScript</li>
-                            <li class="skills__item">React</li>
+                            <li class="skills__item">Typescript</li>
                             <li class="skills__item">Java</li>
                             <li class="skills__item">C#</li>
                             <li class="skills__item">C++</li>
-                            <li class="skills__item">Haskel</li>
-                            <li class="skills__item">Typescript</li>
+                            <li class="skills__item">Haskel</li>                     
                             <li class="skills__item">SQL</li>
                             <li class="skills__item">PHP</li>
-                            <li class="skills__item">Note.js & Express.js</li>
+                            <li class="skills__item">Python</li>
+                            
 
                         </ol>
                     </div>
@@ -199,8 +199,10 @@
                         <ol class="framework__group">
                             <li class="skills__item">Bootstrap</li>
                             <li class="skills__item">JetPack Compose</li>
-
                             <li class="skills__item">LoopBack 4</li>
+                            <li class="skills__item">.NET</li>
+                            <li class="skills__item">React</li>
+                            <li class="skills__item">Note.js & Express.js</li>
                         </ol>
                     </div>
                 </article>
@@ -216,6 +218,7 @@
                             <li class="skills__item">Render Database</li>
                             <li class="skills__item">MongoDB</li>
                             <li class="skills__item">SQLite</li>
+                            <li class="skills__item">PostgreSQL</li>
 
                         </ol>
                     </div>
@@ -226,15 +229,17 @@
 
                     <div class="skills__content">
                         <ol class="platform__group">
-                            <li class="skills__item">Unity</li>
+                           
                             <li class="skills__item">Android Studio</li>
                             <li class="skills__item">Visual Studio</li>
                             <li class="skills__item">Visual Studio Code</li>
                             <li class="skills__item">CLion</li>
                             <li class="skills__item">InteliJ</li>
+                            <li class="skills__item">Unity</li>
                             <li class="skills__item">GitHub</li>
                             <li class="skills__item">Kanban</li>
                             <li class="skills__item">Slack</li>
+                            <li class="skills__item">Git</li>
                         </ol>
                     </div>
                 </article>
